--- a/M1/nodejsProject/checkboxio.yml
+++ b/M1/nodejsProject/checkboxio.yml
@@ -18,13 +18,13 @@
     - name: apt update
       become_user: root
       command: sudo apt-get update
-        
+
     - name: Install dependencies
       apt: name={{ item }} state=present
       with_items: "{{ dependencies }}"
 
     - name: Clone submission repository
-      git: repo=https://{{lookup('env','GITUSER')}}:{{ lookup('env', 'GITPWD' )}}@github.ncsu.edu/akpatil/CSC519-Project.git dest=checkboxio/.
+      git: repo=https://{{lookup('env','GITUSER')}}:{{ lookup('env','GITPWD')}}@github.ncsu.edu/akpatil/CSC519-Project.git dest=checkboxio/.
 
     - name: Install the latest pymongo package
       pip: name=pymongo state=latest use_mirrors=no
@@ -38,24 +38,22 @@
 
     - name: Copy nginx config file
       become: yes
-      template:
-        src: templates/nginx.conf
-        dest: /etc/nginx/sites-enabled 
+      command: cp checkboxio/M1/nodejsProject/checkbox.io/local-conf/nginx.conf /etc/nginx/nginx.conf
 
-    - name: Removing default config file
-      command: "rm {{ item }}"
-      with_items: 
-        - /etc/nginx/sites-available/default
-        - /etc/nginx/sites-enabled/default
+    - name: Copy nginx default file
+      become: yes
+      command: cp checkboxio/M1/nodejsProject/checkbox.io/local-conf/default /etc/nginx/sites-enabled/default
 
     - name: Starting NGINX
       service:
         name: nginx
-        state: started
-    
-    - name: npm install
-      command: chdir=checboxio/CSC519-Project/checkbox.io/server-side/site npm install
+        state: restarted
+
+     - name: npm install
+       command: chdir=checkboxio/M1/nodejsProject/checkbox.io/server-side/site npm install
 
     - name: Run checkbox.io
-      command: chdir=checkboxio/CSC519-Project/checkbox.io/server-side/site node server.js
+      command: chdir=checkboxio/M1/nodejsProject/checkbox.io/server-side/site node server.js
+
+
 
