--- a/M1/nodejsProject/checkboxio.yml
+++ b/M1/nodejsProject/checkboxio.yml
@@ -14,58 +14,72 @@
           - 'python-pip'
           - 'nginx'
 
-  vars_prompt:
-    - name: "emailid"
-      private: no
-      prompt: "Please enter your email-id"
-    - name: "password"
-      private: yes
-      prompt: "PLease enter your password"
+  # vars_prompt:
+  #   - name: "emailid"
+  #     private: no
+  #     prompt: "Please enter your email-id"
+  #   - name: "password"
+  #     private: yes
+  #     prompt: "PLease enter your password"
 
   tasks:   
-    - name: apt update
-      become_user: root
-      command: sudo apt-get update
+    # - name: apt update
+    #   become_user: root
+    #   command: sudo apt-get update
 
-    - name: Install dependencies
-      apt: name={{ item }} state=present
-      with_items: "{{ dependencies }}"
+    # - name: Install dependencies
+    #   apt: name={{ item }} state=present
+    #   with_items: "{{ dependencies }}"
 
-    - name: Install the latest pymongo package
-      pip: name=pymongo state=latest use_mirrors=no
-      
-    - name: Clone submission repository
-      git: repo=https://{{lookup('env','GITUSER')}}:{{ lookup('env','GITPWD')}}@github.ncsu.edu/akpatil/CSC519-Project.git dest=checkboxio/.
+    # - name: Install the latest pymongo package
+    #   pip: name=pymongo state=latest use_mirrors=no
 
-    - name: Set email in environment variable
-      command: chdir=CSC519-Project/checkbox.io/server-side/site export SMTPEMAIL={{ emailid }}
-      
-    - name: Set password in environment variable
-      command: chdir=CSC519-Project/checkbox.io/server-side/site export SMTPPWD={{ password }}
+    # - name: Clone submission repository
+    #   git: repo=https://{{lookup('env','GITUSER')}}:{{ lookup('env','GITPWD')}}@github.ncsu.edu/akpatil/CSC519-Project.git dest=checkboxio/.
 
-    - name: Create user
-      mongodb_user:
-        database: admin
-        name: admin
-        password: admin
-        state: present
+    # - name: Set email in environment variable
+    #   command: chdir=CSC519-Project/checkbox.io/server-side/site export SMTPEMAIL={{ emailid }}
 
-    - name: Copy nginx config file
-      become: yes
-      command: cp checkboxio/M1/nodejsProject/checkbox.io/local-conf/nginx.conf /etc/nginx/nginx.conf
+    # - name: Set password in environment variable
+    #   command: chdir=CSC519-Project/checkbox.io/server-side/site export SMTPPWD={{ password }}
 
-    - name: Copy nginx default file
-      become: yes
-      command: cp checkboxio/M1/nodejsProject/checkbox.io/local-conf/default /etc/nginx/sites-enabled/default
+    # - name: Create user
+    #   mongodb_user:
+    #     database: admin
+    #     name: admin
+    #     password: admin
+    #     state: present
 
-    - name: Starting NGINX
-      service:
-        name: nginx
-        state: started
+    # - name: Copy nginx config file
+    #   become: yes
+    #   command: cp checkboxio/M1/nodejsProject/checkbox.io/local-conf/nginx.conf /etc/nginx/nginx.conf
 
-     - name: npm install
-       command: chdir=checkboxio/M1/nodejsProject/checkbox.io/server-side/site npm install
+    # - name: Copy nginx default file
+    #   become: yes
+    #   command: cp checkboxio/M1/nodejsProject/checkbox.io/local-conf/default /etc/nginx/sites-enabled/default
 
-    - name: Run checkbox.io
-      command: chdir=checkboxio/M1/nodejsProject/checkbox.io/server-side/site node server.js
+    # - name: Starting NGINX
+    #   service:
+    #     name: nginx
+    #     state: started
+
+    # - name: npm install
+    #   command: chdir=checkboxio/M1/nodejsProject/checkbox.io/server-side/site npm install
+
+    - name: "Install forever (to run Node.js app)."
+      npm: name=forever global=yes state=present
+
+    - name: "Check list of Node.js apps running."
+      command: forever list
+      register: forever_list
+      changed_when: false
+
+    - name: "Start example Node.js app."
+      command: forever start -o out.log -e err.log  server.js
+      args:
+        chdir: checkboxio/M1/nodejsProject/checkbox.io/server-side/site/
+      #when: "forever_list.stdout.find('checkboxio/M1/nodejsProject/checkbox.io/server-side/site/server.js') == -1"
+
+    # - name: Run checkbox.io
+    #   command: chdir=checkboxio/M1/nodejsProject/checkbox.io/server-side/site node server.js
 
