--- a/M1/nodejsProject/checkboxio.yml
+++ b/M1/nodejsProject/checkboxio.yml
@@ -14,48 +14,48 @@
           - 'python-pip'
           - 'nginx'
   environment:
-#   MONGO_USER_NAME: "{{lookup('env', 'MONGO_USER_NAME')}}"
-#   MONGO_PASSWORD: "{{lookup('env', 'MONGO_PASSWORD')}}"
+    MONGOUSER: "{{lookup('env', 'MONGOUSER')}}"
+    MONGOPWD: "{{lookup('env', 'MONGOPWD')}}"
     SMTPEMAIL: "{{lookup('env', 'SMTPEMAIL')}}"
     SMTPPWD: "{{lookup('env', 'SMTPPWD')}}"
 
   tasks:   
-    # - name: apt update
-    #   become_user: root
-    #   command: sudo apt-get update
+    - name: apt update
+      become_user: root
+      command: sudo apt-get update
 
-    # - name: Install dependencies
-    #   apt: name={{ item }} state=present
-    #   with_items: "{{ dependencies }}"
+    - name: Install dependencies
+      apt: name={{ item }} state=present
+      with_items: "{{ dependencies }}"
 
-    # - name: Install the latest pymongo package
-    #   pip: name=pymongo state=latest use_mirrors=no
+    - name: Install the latest pymongo package
+      pip: name=pymongo state=latest use_mirrors=no
 
-    # - name: Clone submission repository
-    #   git: repo=https://{{lookup('env','GITUSER')}}:{{ lookup('env','GITPWD')}}@github.ncsu.edu/akpatil/CSC519-Project.git dest=checkboxio/.
+    - name: Clone submission repository
+      git: repo=https://{{lookup('env','GITUSER')}}:{{ lookup('env','GITPWD')}}@github.ncsu.edu/akpatil/CSC519-Project.git dest=checkboxio/.
 
-    # - name: Create user
-    #   mongodb_user:
-    #     database: admin
-    #     name: admin
-    #     password: admin
-    #     state: present
+    - name: Create user
+      mongodb_user:
+        database: admin
+        name: {{ MONGOUSER }}
+        password: {{ MONGOPWD }}
+        state: present
 
-    # - name: Copy nginx config file
-    #   become: yes
-    #   command: cp checkboxio/M1/nodejsProject/checkbox.io/local-conf/nginx.conf /etc/nginx/nginx.conf
+    - name: Copy nginx config file
+      become: yes
+      command: cp checkboxio/M1/nodejsProject/checkbox.io/local-conf/nginx.conf /etc/nginx/nginx.conf
 
-    # - name: Copy nginx default file
-    #   become: yes
-    #   command: cp checkboxio/M1/nodejsProject/checkbox.io/local-conf/default /etc/nginx/sites-enabled/default
+    - name: Copy nginx default file
+      become: yes
+      command: cp checkboxio/M1/nodejsProject/checkbox.io/local-conf/default /etc/nginx/sites-enabled/default
 
-    # - name: Restarting NGINX
-    #   service:
-    #     name: nginx
-    #     state: restarted
+    - name: Restarting NGINX
+      service:
+        name: nginx
+        state: restarted
 
-    # - name: npm install
-    #   command: chdir=checkboxio/M1/nodejsProject/checkbox.io/server-side/site npm install
+    - name: npm install
+      command: chdir=checkboxio/M1/nodejsProject/checkbox.io/server-side/site npm install
 
     - name: "Install forever (to run Node.js app)."
       npm: name=forever global=yes state=present
