--- a/M1/nodejsProject/checkboxio.yml
+++ b/M1/nodejsProject/checkboxio.yml
@@ -37,8 +37,8 @@
     - name: Create user
       mongodb_user:
         database: admin
-        name: {{ MONGOUSER }}
-        password: {{ MONGOPWD }}
+        name: "{{lookup('env', 'MONGOUSER')}}"
+        password: "{{lookup('env', 'MONGOPWD')}}"
         state: present
 
     - name: Copy nginx config file
