--- a/roles/install_dependencies/tasks/setup.yml
+++ b/roles/install_dependencies/tasks/setup.yml
@@ -1,6 +1,6 @@
 ---
-    # - name: install python 2
-    #   raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
+    - name: install python 2
+      raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
       
     - name: Install required packages for build in the VM 
       apt: name={{ item }} state=present
