--- a/roles/deploy_checkbox/tasks/main.yml
+++ b/roles/deploy_checkbox/tasks/main.yml
@@ -12,7 +12,7 @@
       environment:
         MONGOUSER: MONGOUSER
       debug:
-        msg: "{{ MONGOUSER }}"
+        var: "{{ MONGOUSER }}"
 
     - name: Create user
       mongodb_user:
