--- a/roles/deploy_checkbox/tasks/main.yml
+++ b/roles/deploy_checkbox/tasks/main.yml
@@ -11,7 +11,8 @@
       register: MONGOUSER
       environment:
         MONGOUSER: MONGOUSER
-      debug:
+    
+    - debug:
         var: "{{ MONGOUSER }}"
 
     - name: Create user
