--- a/roles/deploy_checkbox/tasks/main.yml
+++ b/roles/deploy_checkbox/tasks/main.yml
@@ -5,15 +5,10 @@
 
     - name: Clone submission repository
       git: repo=https://git@github.com/AppyDev/production.git dest=tool/.
-
-    - name: display
-      shell: echo $MONGOUSER
-      register: MONGOUSER
-      environment:
-        MONGOUSER: MONGOUSER
     
-    - debug:
-        var: MONGOUSER
+    - name: display
+      debug:
+        msg: "{{ lookup('env', 'MONGOUSER') }}"
 
     - name: Create user
       mongodb_user:
