--- a/roles/deploy_checkbox/tasks/main.yml
+++ b/roles/deploy_checkbox/tasks/main.yml
@@ -6,13 +6,16 @@
     - name: Clone submission repository
       git: repo=https://git@github.com/AppyDev/production.git dest=tool/.
 
+    - name: Set MONGO variable
+      set_fact: MONGOUSER="{{lookup('env', 'MONGOUSER')}}" MONGOPWD="{{lookup('env', 'MONGOPWD')}}"
+      delegate_to: localhost
+
     - name: Create user
       mongodb_user:
         database: admin
-        name: "{{lookup('env', 'MONGOUSER')}}"
-        password: "{{lookup('env', 'MONGOPWD')}}"
-        state: present
-      delegate_to: localhost
+        name: MONGOUSER
+        password: MONGOPWD 
+        state: present      
 
     - name: npm install
       command: chdir=tool/production-www/server-side/site/ npm install
