--- a/production-www/server-side/site/package.json
+++ b/production-www/server-side/site/package.json
@@ -5,16 +5,17 @@
   "private": true,
   "dependencies": {
     "archiver": "~0.4.6",
+    "async": "0.2.9",
     "cors": "^2.7.1",
+    "crypto": "0.0.3",
+    "emailjs": "0.3.4",
     "express": "3.x",
+    "jade": "0.32.0",
+    "json5": "0.2.0",
     "marked": "0.2.9",
-    "async":"0.2.9",
-    "crypto":"0.0.3",
-    "json5":"0.2.0",
-    "underscore":"1.5.1",
-    "emailjs":"0.3.4",
-    "mongodb":"1.3.11",
-    "jade":"0.32.0",
-    "validator":""
+    "mongodb": "1.3.11",
+    "redis": "^2.7.1",
+    "underscore": "1.5.1",
+    "validator": ""
   }
 }
