--- a/checkboxio/server-side/site/package.json
+++ b/checkboxio/server-side/site/package.json
@@ -16,6 +16,7 @@
     "mongodb": "1.3.11",
     "redis": "^2.7.1",
     "underscore": "1.5.1",
-    "validator": ""
+    "validator": "",
+    "externalip":""
   }
 }
