--- a/roles/deploy_checkbox/tasks/main.yml
+++ b/roles/deploy_checkbox/tasks/main.yml
@@ -19,7 +19,7 @@
 
     - name: Print env variables
       debug:
-        var: {{ MONGOUSER }}
+        var: "{{ MONGOUSER }}"
 
     - name: Create user
       mongodb_user:
