Changes in main

--- a/roles/deploy_checkbox/tasks/main.yml
+++ b/roles/deploy_checkbox/tasks/main.yml
@@ -30,7 +30,7 @@
 
     - name: Print env
       debug:
-        msg: "{{lookup('env', 'MONGOUSER'}}"
+        msg: "{{lookup('env', 'MONGOUSER')}}"
 
     - name: Create user
       mongodb_user:
