--- a/roles/deploy_checkbox/tasks/main.yml
+++ b/roles/deploy_checkbox/tasks/main.yml
@@ -24,6 +24,7 @@
       with_items:
         - "export MONGOUSER={{lookup('env', 'MONGOUSER')}}"
         - "export MONGOPWD={{lookup('env', 'MONGOPWD')}}"
+      delegate_to: localhost
 
     - name: Source bashrc
       shell: source /home/ubuntu/.bashrc executable=/bin/bash 
