--- a/roles/deploy_checkbox/tasks/main.yml
+++ b/roles/deploy_checkbox/tasks/main.yml
@@ -26,7 +26,9 @@
         - "export MONGOPWD={{ lookup('env', 'MONGOPWD') }}"
 
     - name: Source bashrc
-      shell: source /home/ubuntu/.bashrc executable=/bin/bash 
+      shell: source /home/ubuntu/.bashrc
+      args:
+        executable: /bin/bash
 
     - name: Print env
       debug:
