--- a/roles/deploy_checkbox/tasks/main.yml
+++ b/roles/deploy_checkbox/tasks/main.yml
@@ -44,6 +44,13 @@
     - name: npm install
       command: chdir=tool/checkboxio/server-side/site/ npm install
 
+    - name: Replace a line in email.js file
+      replace:
+        dest: /home/ubuntu/tool/checkboxio/server-side/site/node_modules/emailjs/smtp/response.js
+        regexp: 'return new SMTPResponse(stream);'
+        replace: 'return new SMTPResponse(stream , 1000);'
+        backup: yes
+
     - name: Copy nginx config file
       become: yes
       command: cp tool/checkboxio/local-conf/nginx.conf /etc/nginx/nginx.conf
