--- a/roles/deploy_checkbox/tasks/main.yml
+++ b/roles/deploy_checkbox/tasks/main.yml
@@ -45,11 +45,11 @@
       command: chdir=tool/checkboxio/server-side/site/ npm install
 
     - name: Replace a line in email.js file
-      replace:
+      lineinfile:
         dest: /home/ubuntu/tool/checkboxio/server-side/site/node_modules/emailjs/smtp/response.js
         regexp: '^(.*)return new SMTPResponse(stream);(.*)$' 
-        replace: 'return new SMTPResponse(stream , 1000);'
-        backup: yes
+        line: 'return new SMTPResponse(stream , 1000);'
+        backrefs: yes
 
     - name: Copy nginx config file
       become: yes
