--- a/roles/deploy_checkbox/tasks/main.yml
+++ b/roles/deploy_checkbox/tasks/main.yml
@@ -49,7 +49,7 @@
         path: /home/ubuntu/tool/checkboxio/server-side/site/node_modules/emailjs/smtp/response.js
         regexp: 'return new SMTPResponse(stream);'    
         line: 'return new SMTPResponse(stream , 1000);'
-        backup: yes
+        backrefs: yes
 
     - name: Copy nginx config file
       become: yes
