--- a/roles/deploy_checkbox/tasks/main.yml
+++ b/roles/deploy_checkbox/tasks/main.yml
@@ -47,7 +47,7 @@
     - name: Replace a line in email.js file
       replace:
         path: /home/ubuntu/tool/checkboxio/server-side/site/node_modules/emailjs/smtp/response.js
-        regexp: return new SMTPResponse(stream);    
+        regexp: ^\s*return new SMTPResponse\(stream\)\s*;    
         replace: return new SMTPResponse(stream , 1000);
 
     - name: Copy nginx config file
