--- a/roles/deploy_checkbox/tasks/main.yml
+++ b/roles/deploy_checkbox/tasks/main.yml
@@ -6,7 +6,7 @@
     - name: Clone submission repository
       git: repo=https://git@github.com/AppyDev/{{ group_names[0] }}.git dest=tool/.
 
-    # - name: Set MONGO variable
+    # - name: Set MONGO variable.
     #   set_fact: MONGOUSER="{{lookup('env', 'MONGOUSER')}}" MONGOPWD="{{lookup('env', 'MONGOPWD')}}"
     #   delegate_to: localhost
 
